# Hex

./: .gitignore  .gitmodules  .travis.yml  2zip.bat  CMakeLists.txt  README.md  README.txt  config.json  hex.cbp  rm_tmp.bat  version_history.txt
Hex_qbs/: Hex_qbs.pro
Hex_qmake/: Hex_qmake.pro  all.pro  common.pri  hex.pro  hex_lib.pro  tests.pro
docs/: Ispoljzovanije SDF.txt  Nemnogo šestiugoljnoj matematiki.txt  Otnošenije objektov, hranäscihsä cerez umnyje ukazateli.txt  Smena dnä i noci, vremön goda.txt  format hranenija cankov.txt  interfejs.txt  tekstury.txt  Возможности и ограничения.txt  Освещение.txt  Примерная хронология разработки.txt  Просчёт столкновений.txt  Технические детали реализации.txt
shaders/: build_prism_frag.glsl  build_prism_geom.glsl  build_prism_vert.glsl  clouds_frag.glsl  clouds_vert.glsl  console_bg_frag.glsl  console_bg_geom.glsl  console_bg_vert.glsl  crosshair_frag.glsl  crosshair_vert.glsl  depth_based_antialiasing_frag.glsl  fire_frag.glsl  fire_vert.glsl  fullscreen_quad_vert.glsl  fxaa_frag.glsl  hex_grid_frag.glsl  point_cloud_depth_filter_frag.glsl  point_cloud_frag.glsl  rain_frag.glsl  rain_heightmap_vert.glsl  rain_vert.glsl  sky_frag.glsl  sky_vert.glsl  stars_frag.glsl  stars_vert.glsl  sun_frag.glsl  sun_vert.glsl  supersampling_2x2_frag.glsl  supersampling_3x3_frag.glsl  supersampling_frag.glsl  text_frag.glsl  text_vert.glsl  ui_frag.glsl  ui_vert.glsl  water_frag.glsl  water_vert.glsl  world_common.glsl  world_frag.glsl  world_vert.glsl  Копия build_prism_vert.glsl
shaders/glsl_120/: build_prism_frag.glsl  build_prism_vert.glsl  sky_frag.glsl  sky_vert.glsl  sun_frag.glsl  sun_vert.glsl  text_frag.glsl  text_vert.glsl  water_frag.glsl  water_vert.glsl  world_frag.glsl  world_vert.glsl
src/: block.cpp  block.hpp  block_collision.cpp  block_collision.hpp  blocks_list.hpp  calendar.cpp  calendar.hpp  chunk.cpp  chunk.hpp  chunk_loader.cpp  chunk_loader.hpp  chunk_phys_mesh.cpp  chunk_phys_mesh.hpp  console.cpp  console.hpp  fwd.hpp  hex.hpp  main.cpp  main_loop.cpp  main_loop.hpp  path_finder.cpp  path_finder.hpp  player.cpp  player.hpp  res.rc  settings.cpp  settings.hpp  settings_keys.cpp  settings_keys.hpp  thread.hpp  ticks_counter.cpp  ticks_counter.hpp  time.cpp  time.hpp  world.cpp  world.hpp  world_action.hpp  world_header.cpp  world_header.hpp  world_lighting.cpp  (+4 more)
src/math_lib/: allocation_free_list.hpp  allocation_free_set.hpp  assert.hpp  binary_stream.hpp  collection.hpp  fixed.hpp  m_math.cpp  m_math.h  math.cpp  math.hpp  matrix.cpp  matrix.h  minmax.hpp  rand.cpp  rand.h  rand.hpp  small_objects_allocator.hpp
src/renderer/: chunk_data_cache.cpp  chunk_data_cache.hpp  chunk_info.cpp  chunk_info.hpp  cubemap.cpp  cubemap.h  fire_mesh.cpp  fire_mesh.hpp  fmd_format.h  font.cpp  font.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cpp  framebuffer.hpp  framebuffer_texture.cpp  framebuffer_texture.hpp  func_addresses.cpp  func_declarations.h  glsl_program.cpp  glsl_program.h  glxext.h  i_world_renderer.hpp  img_utils.cpp  img_utils.hpp  model_manager.cpp  model_manager.h  ogl_state_manager.cpp  ogl_state_manager.hpp  ph.h  polygon_buffer.cpp  polygon_buffer.h  renderer.cpp  renderer.hpp  rendering_constants.h  rendering_constants.hpp  text.cpp  text.hpp  texture.cpp  texture.h  (+15 more)
src/test/: allocation_free_list_test.cpp  allocation_free_set_test.cpp  calendar_test.cpp  fixed_test.cpp  math_test.cpp  test.cpp  test.h  test_test.cpp
src/ui/: console_menu.cpp  console_menu.hpp  ingame_menu.cpp  ingame_menu.hpp  loading_menu.cpp  loading_menu.hpp  main_menu.cpp  main_menu.hpp  styles.hpp  ui_base_classes.cpp  ui_base_classes.hpp  ui_painter.cpp  ui_painter.hpp
src/world_generator/: noise.cpp  noise.hpp  rivers.cpp  rivers.hpp  world_generator.cpp  world_generator.hpp
textures/: textures.cfg  textures.json
